gccida/g1/validize_mem
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/validize_mem/src/explow.c:1095:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)ref + 2), ref->fld[0].rtx) ) 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/validize_mem/src/obj/explow.o] Error 1
